--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,10 @@
 .shadow-top {
   box-shadow: 0 -3px 6px -2px #a38cee;
 }
+::-webkit-scrollbar {
+  width: 0; /* WebKit */
+  display: none; /* Hide scrollbar for WebKit (Chrome, Safari, etc.) */
+}
 
 @layer base {
   body {
